3GPP SGmb (diameter) 'MBMS-Session-Duration' AVP dissection error
This issue was migrated from bug 7012 in our old bug tracker.
Original bug information:
Reporter: Liangfeng
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: x86
Version: 1.7.x (Experimental)
Attachments:
fix-3gpp-sgmb.patch: Fix sGmb MBMS-Session-Duration AVP dissection.
fix-3gpp-sgmb.patch: Fix sGmb MBMS-Session-Duration AVP dissection.