From Liangfeng via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=7012 :

According to 3GPP R7//R8/R9/R10/R11, AVP 'MBMS-Session-Duration' has 3 octets.
First 17 bits indicate seconds, the rest of bits(7 bits) represents days. 

However, in the source file packet-gtp.c, it parse the AVP reversely -- taking
first 7 bits as days, the rest of 17 bits as seconds.  This patch fixes that.

svn path=/trunk/; revision=41849